--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -1,8 +1,8 @@
 <ion-header [translucent]="true">
     <ion-toolbar>
-        <ion-label style="
+        <ion-label class="ion-padding-start" style="
         font-size: 1.4rem;
-        padding: 0px 15px;">Aluga Conquista</ion-label>
+        ">Aluga Conquista</ion-label>
         <ion-buttons slot="end">
             <ion-button (click)="logout()" routerLink="/login">
                 <ion-icon name="person-circle-outline"></ion-icon>
