--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -28,7 +28,7 @@
         </ion-card-subtitle>
 
         <ion-toolbar class="ion-margin-bottom">
-            <ion-text color="danger">{{imovel.valor | currency: 'BRL'}}</ion-text>
+            <ion-text color="danger">{{imovel.valorDoAluguel | currency: 'BRL'}}</ion-text>
             <ion-button slot="end" (click)="irParaDetalhesImovel()">
                 <ion-icon name="add" slot="start"></ion-icon>
                 <ion-label>Ver mais</ion-label>
