css edits detalhesimovel

--- a/src/app/detalhes-imovel/detalhes-imovel.page.html
+++ b/src/app/detalhes-imovel/detalhes-imovel.page.html
@@ -1,6 +1,9 @@
 <ion-header>
-    <ion-toolbar color="primary">
-        <ion-title>Detalhes Imóvel</ion-title>
+    <ion-toolbar style="--ion-background-color: var(--ion-color-primary);">
+        <ion-title style="color: white; font-size: 1.4rem;">Detalhes do imóvel</ion-title>
+        <ion-buttons slot="end">
+            <ion-button style="background-color: var(--ion-color-danger); border-radius: 5px;" color="light" (click)="dismiss()">FECHAR</ion-button>
+        </ion-buttons>
     </ion-toolbar>
 </ion-header>
 
