--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -21,7 +21,9 @@
 
 <ion-content [fullscreen]="true">
     <ion-card mode="ios" *ngFor="let imovel of imoveis">
-        <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" />
+        <ng-template ngFor let-imagem [ngForOf]="imovel.imagens">
+          <img [src]="imagem" />
+        </ng-template>
 
         <ion-card-subtitle>
             {{imovel.endereco + ' ' + imovel.bairro + ' '}}
