--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -31,7 +31,7 @@
 
         <ion-toolbar class="ion-margin-bottom">
             <ion-text color="danger">{{imovel.valorDoAluguel | currency: 'BRL'}}</ion-text>
-            <ion-button slot="end" (click)="irParaDetalhesImovel()">
+            <ion-button slot="end" (click)="irParaDetalhesImovel(imovel)">
                 <ion-icon name="add" slot="start"></ion-icon>
                 <ion-label>Ver mais</ion-label>
             </ion-button>
