--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -22,15 +22,15 @@
 <ion-content [fullscreen]="true">
     <ion-card mode="ios" *ngFor="let imovel of imoveis">
         <ng-template ngFor let-imagem [ngForOf]="imovel.imagens">
-          <img [src]="imagem" />
+            <img [src]="imagem" />
         </ng-template>
 
         <ion-card-subtitle>
-            {{imovel.endereco + ' ' + imovel.bairro + ' '}}
+            {{imovel.endereco + ' - ' + imovel.bairro + ' - ' + imovel.tipo '}}
         </ion-card-subtitle>
 
         <ion-toolbar class="ion-margin-bottom">
-            <ion-text color="danger">{{imovel.valorDoAluguel | currency: 'BRL'}}</ion-text>
+            <ion-text style="font-size: 1.4rem;" color="danger">{{imovel.valorDoAluguel | currency: 'BRL'}}</ion-text>
             <ion-button slot="end" (click)="irParaDetalhesImovel()">
                 <ion-icon name="add" slot="start"></ion-icon>
                 <ion-label>Ver mais</ion-label>
